# Homotopy-constrained-planning

./: .gitignore  Gradient_descent_generation.cpp  Hash_test.cpp  README.md  a.out  append&check_signatures.h  cv_points.h  display.h  get_representativepoints.h  main.cpp  mha*.h  planner.cpp  planner.h  planner2.h  planner3.h  planner4.h  signatures.h
complex_analysis_based/: CMakeLists.txt  genmex.m  planner.cpp  planner.mexa64  robotplanner.m  runtest.m
complex_analysis_based/include/: config.h  dijkstra.h  hash_functions.h  heap.h  heap_new.h  smpl_heap.h
complex_analysis_based/src/: dijkstra.cpp
homotopy_arm_planner/: CMakeLists.txt  a_star_-2.mat  armplanner.m  demo.m  genmex.m  main.m  map4.txt  planner.cpp  planner.mexa64  runtest.m
homotopy_arm_planner/include/: astar.h  config.h  dijkstra.h  discrete_arm_planner.h  h_signature.h  hash_functions.h  heap.h  macros.h
homotopy_arm_planner/src/: astar.cpp  dijkstra.cpp  discrete_arm_planner.cpp  h_signature.cpp
